--- a/roles/java/tasks/main.yml
+++ b/roles/java/tasks/main.yml
@@ -1,2 +1,2 @@
 - name: ensure OpenJDK 1.7 runtime is installed
-  yum: java-1.7.0-openjdk state=present
+  yum: name=java-1.7.0-openjdk state=present
