--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -9,7 +9,22 @@
   get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.64/bin/apache-tomcat-7.0.64.tar.gz dest=/tmp/apache-tomcat-7.0.64.tar.gz
 
 - name: Uncompress Tomcat
-  unarchive: src=http://mirror.its.dal.ca/apache/tomcat/tomcat-7/v7.0.64/bin/apache-tomcat-7.0.64.tar.gz dest=/opt/ copy=no owner=root group=root creates=/opt/apache-tomcat-7.0.64
+  unarchive: src=/tmp/apache-tomcat-7.0.64.tar.gz dest=/opt/ copy=no owner=root group=root creates=/opt/apache-tomcat-7.0.64
 
 - name: Change ownership of Tomcat installation
   file: path=/opt/apache-tomcat-7.0.64 owner=tomcat group=tomcat state=directory recurse=yes
+
+- name: Symlink install directory
+  file: src=/opt/apache-tomcat-7.0.64 path=/usr/share/tomcat state=link
+
+- name: Change ownership of Tomcat installation
+  file: path=/usr/share/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
+
+- name: Install Tomcat systemd config
+  copy: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=0755
+
+- name: Start Tomcat
+  service: name=tomcat state=started enabled=yes
+
+- name: wait for tomcat to start
+  wait_for: port=8080
