--- a/roles/openwayback/tasks/main.yml
+++ b/roles/openwayback/tasks/main.yml
@@ -2,7 +2,7 @@
   get_url: url=http://search.maven.org/remotecontent?filepath=org/netpreserve/openwayback/openwayback-dist/{{ openwayback.version }}/openwayback-dist-{{ openwayback.version }}.tar.gz dest=/tmp/openwayback-dist-{{ openwayback.version }}.tar.gz
 
 - name: Uncompress OpenWayback
-  unarchive: src=/tmp/openwayback-dist-{{ openwayback.version }}.tar.gz dest=/opt/ copy=no owner=root group=root creates=/opt/openwayback
+unarchive: src=/tmp/openwayback-dist-{{ openwayback.version }}.tar.gz dest=/opt/ copy=no owner=root group=root creates=/opt/openwayback/openwayback-{{ openwayback.version }}.war
 
 - name: clear Tomcat current ROOT app
   file: path=/opt/tomcat/webapps/ROOT/ state=absent
