add jq in dev role (cli json viewer)

--- a/roles/devel/tasks/main.yml
+++ b/roles/devel/tasks/main.yml
@@ -1,3 +1,7 @@
 - name: ensure base development system is installed
   yum: name="@Development Tools" state=present
 
+- name: ensure some useful dev packages are installed
+  yum: name={{ item }} state=present
+  with_items:
+    - jq
