--- a/roles/gcwebarchives/files/gcwebarchives.service
+++ b/roles/gcwebarchives/files/gcwebarchives.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=GCWebArchives
-After=syslog.target network.target
+After=syslog.target network.target mariadb.service
 
 [Service]
 User=lacwayback
